test/parsing/errors/preIncDecOp.compopts
--detailed-errors # preIncDecOp-detailed.good
--no-detailed-errors # preIncDecOp-brief.good
